<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/restaurantDetailsRootLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.appbar.AppBarLayout
            android:fitsSystemWindows="true"
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_layout_height"
                android:fitsSystemWindows="false"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
                app:statusBarScrim="?attr/colorPrimary"
                app:contentScrim="?attr/colorPrimary"
                >

                <FrameLayout
                    android:fitsSystemWindows="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <ImageView
                        android:fitsSystemWindows="true"
                        android:id="@+id/restaurantPhoto"
                        app:layout_collapseMode="parallax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:src="@drawable/restaurant_img"
                        android:scaleType="centerCrop"
                        />

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/restaurantPhotoShimmer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:shimmer_auto_start="true"
                        app:shimmer_duration="800">
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/restaurant_placeholder_bg"/>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                </FrameLayout>

                <View
                    android:id="@+id/shadow"
                    android:visibility="invisible"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="bottom|start"
                    android:background="@drawable/image_bg_gradiant"/>

                <androidx.appcompat.widget.Toolbar
                    android:fitsSystemWindows="false"
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    android:theme="@style/ToolbarTheme"
                    app:titleTextColor="@color/white"
                    app:title="@string/app_name"
                    />

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/restaurantDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/restaurantAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:paddingEnd="75dp"
                android:paddingVertical="10dp"
                android:paddingStart="16dp"
                tools:text="141 Rue Wellingtfsson S, Sherbrooke, QC J1H 5C9"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/callButton"
                    android:text="@string/call_text"
                    style="@style/RestaurantDetailsAction"
                    android:drawableTop="@drawable/ic_call_24"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/likeButton"
                    app:layout_constraintRight_toLeftOf="@id/likeButton"/>

                <Button
                    android:id="@+id/likeButton"
                    android:text="@string/like_text"
                    style="@style/RestaurantDetailsAction"
                    android:drawableTop="@drawable/ic_star_border_24"
                    app:layout_constraintLeft_toRightOf="@id/callButton"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/urlButton" />

                <Button
                    android:id="@+id/urlButton"
                    style="@style/RestaurantDetailsAction"
                    android:text="@string/website_text"
                    android:drawableTop="@drawable/ic_baseline_public_24"
                    app:layout_constraintLeft_toRightOf="@id/likeButton"
                    app:layout_constraintTop_toTopOf="@id/likeButton"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_gravity="bottom|center"
                android:background="@android:color/darker_gray"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    tools:listitem="@layout/restaurant_client_item"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/workmatesWhoGoToThisRestaurant"/>

                <LinearLayout
                    android:id="@+id/workplace_required_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="40dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:visibility="gone"
                    android:gravity="center">

                    <TextView
                        android:layout_marginBottom="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textAlignment="center"
                        android:text="@string/workplace_required_message_restaurant_details"
                        />
                    <Button
                        android:id="@+id/select_my_workplace_action"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_my_workplace_btn"/>

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:id="@id/restaurantStars"
        android:layout_width="68dp"
        android:layout_height="25dp"
        android:layout_gravity="start|top"
        tools:src="@drawable/ic_two_stars_24"
        app:layout_anchor="@id/appBarLayout"
        app:layout_collapseMode="parallax"
        app:layout_anchorGravity="bottom|start"
        android:layout_marginStart="15dp"
        android:paddingBottom="6dp"
        android:scaleType="fitStart"
        app:tint="#FFEB3B" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/actionChooseRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_indeterminate_check_box_24"
        app:backgroundTint="@color/white"
        app:maxImageSize="32dp"
        app:tint="@null"
        android:contentDescription="@string/user_choice_state"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginEnd="16dp"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>