<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/searchAction"
        android:icon="@drawable/ic_search_24"
        android:title="@string/search_a_restaurant_btn_txt"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        />

    <item
        android:id="@+id/orderRestaurants"
        android:title="@string/order_restaurant_list"
        android:icon="@drawable/ic_filter_list_24"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/orderByStars"
                android:title="@string/order_by_stars"/>

            <item
                android:id="@+id/orderByNearest"
                android:title="@string/order_by_nearest"/>

            <item android:id="@+id/orderByNumberOfWorkmates"
                android:title="@string/order_by_workmates_count"/>
        </menu>

    </item>
</menu>