...
            app:layout_constrainedWidth="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_marginEnd="2dp"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintRight_toLeftOf="@id/distanceFromCurrentLoc"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/restaurantAddress"
            tool:text="The Names" />

        <TextView
...
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_marginEnd="2dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toBottomOf="@id/restaurantName"
            app:layout_constraintLeft_toLeftOf="@id/restaurantName"
            app:layout_constraintRight_toLeftOf="@id/numberOfWorkmatesThere"
            app:layout_constraintBottom_toTopOf="@id/restaurantOpeningHours"
            tool:text="264 Rue The Restaurant address" />

        <TextView
            android:id="@+id/restaurantOpeningHours"
            android:layout_width="wrap_content"
...
